samples/_failures_safe/1761638544_c0f9e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4df3dbd4.c: In function ‘main’:
./samples/SAFE/__tmp_4df3dbd4.c:168:5: error: expected expression at end of input
  168 |     if (
      |     ^~
./samples/SAFE/__tmp_4df3dbd4.c:168:5: error: expected declaration or statement at end of input
